--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,18 @@ owner: roswellit # Your GitHub organization or username, where this repository l
 repo: status # The name of this repository
 
 sites:
-  - name: Outlook for Web
+  - name: Microsoft 365 - Outlook for Web
     url: https://outlook.office365.com
-  - name: roswellit.com
+  - name: Microsoft 365 - Exchange Online Message Delivery
+    check: "tcp-ping"
+    url: roswellit-com.mail.protection.outlook.com
+    port: 25
+  - name: Our Website - roswellit.com
     url: https://roswellit.com
-  - name: RMM
+  - name: Customer Remote Monitoring & Management Services
     url: https://roswellitservices.hostedrmm.com
-  - name: CRM
-    url: https://eu.myconnectwise.net
+  - name: Customer Helpdesk
+    url: https://roswell.myportallogin.co.uk
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
