--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,6 +10,8 @@ sites:
     url: https://roswell.myportallogin.co.uk
   - name: help.roswellit.com
     url: https://roswellitservices.hostedrmm.com:8040/
+  - name: Daisy Business Broadband Services
+    url: http://62.232.218.2:2003/
   - name: HVS - Platform
     check: "tcp-ping"
     url: dm.yourwhc.co.uk
