--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,31 +10,11 @@ sites:
     url: https://roswell.myportallogin.co.uk
   - name: help.roswellit.com
     url: https://roswellitservices.hostedrmm.com:8040/
-  - name: Daisy Business Broadband Services
-    check: "tcp-ping"
-    url: 62.232.218.2
-    port: 2003
-  - name: HVS - Platform
+  - name: VoIP Services
     check: "tcp-ping"
     url: dm.yourwhc.co.uk
     port: 443
-  - name: HVS - Office UC
-    check: "tcp-ping"
-    url: officeuc.yourwhc.co.uk
-    port: 443
-  - name: HVS - Go TAPI Integrator
-    check: "tcp-ping"
-    url: applications.yourwhc.co.uk
-    port: 443
-  - name: Google Public Recursive DNS
-    check: "tcp-ping"
-    url: 8.8.8.8
-    port: 53
-  - name: CloudFlare Public Recursive DNS
-    check: "tcp-ping"
-    url: 1.1.1.1
-    port: 53
-  - name: Remote Monitoring & Management
+  - name: Remote Monitoring & Management Services
     url: https://roswellitservices.hostedrmm.com
 
 status-website:
