--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,7 +19,7 @@ sites:
   - name: Remote Monitoring & Management (RMM)
     url: https://roswellitservices.hostedrmm.com
   - name: Stratum 1 Network Time Service (NTP)
-    check: "tcp-ping"
+    check: "udp-ping"
     url: time.roswellit.com
     port: 123
 
