--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,41 +1,46 @@
-# Change these first
-owner: roswellit # Your GitHub organization or username, where this repository lives
-repo: status # The name of this repository
+owner: roswellit
+repo: status
 user-agent: status.roswellit.com
-
 sites:
   - name: www.roswellit.com
-    url: https://roswellit.com
+    url: 'https://roswellit.com'
   - name: portal.roswellit.com
-    url: https://roswell.myportallogin.co.uk
+    url: 'https://roswell.myportallogin.co.uk'
   - name: help.roswellit.com
-    url: https://roswellitservices.hostedrmm.com:8040/
+    url: 'https://roswellitservices.hostedrmm.com:8040/'
   - name: VoIP Services
-    check: "tcp-ping"
+    check: tcp-ping
     url: dm.yourwhc.co.uk
     port: 443
   - name: Ticketing & Service Automation (PSA)
-    url: https://eu.myconnectwise.net
+    url: 'https://eu.myconnectwise.net'
   - name: Remote Monitoring & Management (RMM)
-    url: https://roswellitservices.hostedrmm.com
-
+    url: 'https://roswellitservices.hostedrmm.com'
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.roswellit.com
-  # baseUrl: /your-repo-name
-  logoUrl: https://roswellit.com/wp-content/uploads/2020/05/little-bit-bigger.png
-  name: Roswell IT - Status
-  introTitle: "What is this page?"
-  introMessage: "Roswell IT provides managed IT solutions to our clients. Here you can see the status of public services, our widely-deployed products, as well as any incidents affecting services you are likely to use."
+  logoUrl: 'https://roswellit.com/wp-content/uploads/2020/05/little-bit-bigger.png'
+  favicon: 'https://roswellit.com/wp-content/uploads/2020/05/little-bit-bigger.png'
+  name: Roswell Status Page
+  introTitle: What is this?
+  introMessage: >-
+    Roswell IT provides managed IT solutions to our clients. Here you can see
+    the status of public services, our widely-deployed products, as well as any
+    incidents affecting services you are likely to use.
   navbar:
     - title: www.roswellit.com
-      href: https://roswellit.com
+      href: 'https://roswellit.com'
     - title: support@roswellit.com
-      href: mailto://support@roswellit.com
+      href: 'mailto://support@roswellit.com'
     - title: 01355 265588
-      href: tel:01355265588
-      
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+      href: 'tel:01355265588'
+  commitMessages: null
+  commitAuthorName: Roswell IT Status Bot
+  commitAuthorEmail: automation@roswellit.com
+  workflowSchedule: null
+  graphs: 0 0 * * *
+  responseTime: 0 23 * * *
+  staticSite: 0 1 * * *
+  summary: 0 0 * * *
+  updateTemplate: 0 0 * * *
+  updates: 0 3 * * *
+  uptime: '* * * * *'
